Fix dark mode colors

--- a/docs/css/mainStyle.css
+++ b/docs/css/mainStyle.css
@@ -130,7 +130,7 @@ div.cardsection {
   }
 
   div.threecolumncardholder {
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     min-width: 0%;
     max-width: 100%;
     width: 85vw;
@@ -461,7 +461,7 @@ div.gallery {
   }
 
   button:hover {
-    background-color: #57bcbc;
+    background-color: #74accc;
     color: white;
     box-shadow: 0px 0px 3px lightgrey;
   }
@@ -568,7 +568,7 @@ div.gallery {
 
   /* Buttons */
   button {
-    background-color: #1c4646;
+    background-color: #1c3a46;
     color: #aacadd;
   }
 
